Adding new agent modes

--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -27,7 +27,7 @@
     "> 📝 **Note:**\n",
     "> This repo is intended to give an introduction to various **GitHub Copilot** features, such as **Copilot Chat** and **inline chat**. Hence the step-by-step guides below contain the general description of what needs to be done, and Copilot Chat or inline chat can support you in generating the necessary commands.\n",
     ">\n",
-    "> Each step (where applicable) also contains a `Cheatsheet` which can be used to validate the Copilot suggestion(s) against the correct command.\n",
+    "> Each step (where applicable) also contains a `Cheatsheet` which has some suggested prompts if you get stuck.\n",
     "\n",
     "> 💡 Play around with different prompts and see how it affects the accuracy of the GitHub Copilot suggestions. For example, when using inline chat, you can use an additional prompt to refine the response without having to rewrite the whole prompt."
    ]
@@ -37,15 +37,13 @@
    "id": "df78fdde",
    "metadata": {},
    "source": [
-    "### Data Project features\n",
+    "### Data Science Project features\n",
     "\n",
-    "TODO: Update this\n",
+    "In this workshop, you will be working with CSV data included in this repository, as well as a Jupyter Notebook that starts some analysis of the data. Here are some features of the project you will work with:\n",
     "\n",
-    "In this workshop, you will be working with data from a CSV file included in this repository, as well as a Python script file that will interact with the CSV file. Here are some features of the project you will work with:\n",
-    "\n",
-    "1. Consume a CSV dataset and perform transformations\n",
-    "1. Identify and implement validations\n",
-    "1. Create a command-line tool that can be used in CI/CD environments"
+    "1. Consume a CSV dataset and clean it\n",
+    "1. Identify correlations and create polished, exportable results\n",
+    "1. Fast track creating a new analysis notebook from scratch"
    ]
   },
   {
@@ -76,11 +74,7 @@
   {
    "cell_type": "markdown",
    "id": "a1c0d503",
-   "metadata": {
-    "tags": [
-     "slide"
-    ]
-   },
+   "metadata": {},
    "source": [
     "### 1. Create a new repository from this template\n",
     "\n",
@@ -138,9 +132,9 @@
     "\n",
     "⏳ **~2min**\n",
     "\n",
-    "GitHub Copilot benefits from having context. One way to enhance context is by opening relevant files.\n",
+    "GitHub Copilot benefits from having context. One way to enhance context is by opening relevant files, else you can add them into your prompt context later.\n",
     "\n",
-    "TODO: appropriate files - Open the `main.py`, `check.py`, `train.csv`, and `transformed_train.csv` files"
+    "- Open the `villagers.csv`, `furnature.csv` and `villagers_analysis.ipynb` data files."
    ]
   },
   {
@@ -148,7 +142,7 @@
    "id": "baf19413",
    "metadata": {},
    "source": [
-    "## Data importing and cleaning"
+    "## Data Wrangling"
    ]
   },
   {
@@ -161,33 +155,30 @@
     "⏳ **~5min**\n",
     "\n",
     "- Open GitHub Copilot Chat\n",
-    "- Use the `@workspace` agent to ask Copilot what the `main.py` and `check.py` files are doing\n",
-    "- Again, with the `@workspace` agent, ask Copilot what is the nature of the data you are going to work with"
+    "- Use the `@workspace` agent to ask Copilot what is the nature of the data you are going to work with\n",
+    "- Also ask `@workspace` what sort of python packages the project uses, and in what ways"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd563067",
+   "id": "5afb8d9b",
    "metadata": {},
    "source": [
-    "#### 2. Fix the high ratings function\n",
+    "### 2. Review the data files with Data Wrangler\n",
     "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢⚪⚪⚪⚪⚪] 7/12 (58%)\n",
+    "⏳ **~5min**\n",
     "\n",
-    "⏳ **~3min**\n",
+    "- Right click on `data/acnh-data/fish.csv`, and open it with Data Wrangler. If it needs a kernel selected, choose the the `venv` Python environment\n",
+    "- Scroll around and look at the state of the data, noting all of the column summaries at the top\n",
+    "- Using the Copilot agent built into Data Wrangler in the panel below the grid, ask it to change the values of the `Rain/Snow Catch Up` column to a bool type with 0 as false\n",
+    "- Export your new data as a csv file `fish-cleaned.csv` via the button just above the grid that says `Export to CSV`\n",
     "\n",
-    "- In `main.py` find the `select_high_ratings()` function\n",
-    "- Insert your cursor in the function signature or body somewhere\n",
-    "- Open inline chat with `Ctrl-i` or `Cmd-i` (on Mac)\n",
-    "- Prefix your prompt with the `/explain` slash command\n",
-    "- Ask why this function might not be working and implement any potential fixes\n",
-    "- Re-generate `transformed_train.csv` by running `python main.py`\n",
-    "- Verify the fix by running `python check.py` with this function returning an `OK`"
+    ">💡 If you need to repeat the same cleaning process many times, you can export your steps in Data Wrangler to a reuseable notebook or as python code to your clipbord!\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4a6bbe63",
+   "id": "85901e93",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -196,16 +187,49 @@
     "##### Prompt\n",
     "\n",
     "```sh\n",
-    "/explain why this function might not be working correctly?\n",
+    "Clean up the rain/snow column so that it is a bool type and No is false\n",
     "```\n",
     "\n",
-    "##### Expected output\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b459f7c",
+   "metadata": {},
+   "source": [
+    "## Initial analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e60340f",
+   "metadata": {},
+   "source": [
+    "### 3. Start a new notebook for the cleaned fish data\n",
+    "\n",
+    "⏳ **~5min**\n",
+    "\n",
+    "- Open the Copilot chat panel from the icon in the top menubar or the command pallet (View: Toggle Chat)\n",
+    "- In the text box at the bottom click the add context button and select `Files & Folders...`, navigate to your newly cleaned `fish-cleaned.csv`, and select it\n",
+    "- In the bottom left of the chat box, select the `ds-create` mode for the chat.\n",
+    "- Ask Copilot to start a new project for this data in the chat panel text box\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ce8564a",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Cheatsheet</summary>\n",
+    "\n",
+    "##### Prompt\n",
     "\n",
     "```sh\n",
-    "Based on the provided code, there are a few potential reasons why the `select_high_ratings` function might not be working correctly:\n",
-    "\n",
-    "1. Typo in Column Name: The function checks if the column name 'ratings' exists in the DataFrame `df.columns` If there is a typo in the column name, such as 'rating' instead of 'ratings', the condition `if 'ratings' in df.columns`\n",
+    "Start a new analysis for this data\n",
     "```\n",
+    "\n",
     "</details>"
    ]
   },
@@ -214,16 +238,12 @@
    "id": "98fe0240",
    "metadata": {},
    "source": [
-    "#### 3. Fix the one-hot encoding problem\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢⚪⚪⚪⚪] 8/12 (66%)\n",
+    "### 4. Review and edit visualizations inline in notebooks\n",
     "\n",
     "⏳ **~3min**\n",
     "\n",
-    "- Select the `drop_and_one_hot_encode_red_wine()` function and open inline chat (Ctrl-i/ Cmd-i)\n",
-    "- Use the `/fix` slash command to ask GitHub Copilot to suggest a potential fix\n",
-    "- Re-generate `transformed_train.csv` by running `python main.py`\n",
-    "- Verify the fix by running `python check.py` with this function returning an `OK`"
+    "- In your newly created notebook, go to a cell output that has some sort of plot\n",
+    "- Can click and drag it to the Copilot chat panel and ask directly for it to change something about the plot (you can also add it by clicking the `...` to the top right of the cell)\n"
    ]
   },
   {
@@ -237,47 +257,37 @@
     "##### Prompt\n",
     "\n",
     "```sh\n",
-    "This function is not doing one-hot encoding on the variety column\n",
+    "Can you make all of these plots higher dpi and using colorblind safe color pallets?\n",
     "```\n",
     "\n",
-    "##### Expected output\n",
-    "\n",
-    "```python\n",
-    "def drop_and_one_hot_encode_red_wine(df):\n",
-    "    \"\"\"\n",
-    "    Create a 'Red_Wine' column that is 1 if 'variety' is 'Red Wine' and 0 otherwise.\n",
-    "    Drop the original 'variety' column.\n",
-    "    \"\"\"\n",
-    "    if 'variety' in df.columns:\n",
-    "        df['Red_Wine'] = df['variety'].apply(lambda x: 1 if x == 'Red Wine' else 0)\n",
-    "        df = df.drop(columns=['variety'])\n",
-    "    return df\n",
-    "```\n",
     "</details>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c75e0d07",
+   "id": "0b56ab9e",
    "metadata": {},
    "source": [
-    "#### 4. Fix the ratings conversion to int\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢⚪⚪⚪] 9/12 (75%)\n",
-    "\n",
-    "⏳ **~3min**\n",
-    "\n",
-    "- If your `verify_ratings_to_int` check is already \"OK\", then Copilot may have already fixed this issue for you. If not, continue with the following steps.\n",
-    "- Select the `convert_ratings_to_int()` function and open inline chat (Ctrl-i / Cmd-i)\n",
-    "- Use the `/explain` slash command to ask GitHub Copilot why this function might not be working correctly\n",
-    "- Identify the problem and implement the fix\n",
-    "- Re-generate `transformed_train.csv` by running `python main.py`\n",
-    "- Verify the fix by running `python check.py` with this function returning an `OK`"
+    "## Extending and refining notebooks"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c53a940",
+   "id": "dd563067",
+   "metadata": {},
+   "source": [
+    "### 5. Continue the villager analysis with the `ds-categorical-analysis` agent\n",
+    "\n",
+    "⏳ **~5min**\n",
+    "\n",
+    "- Open the `villager_analysis.ipynb` file and the copilot chat side panel\n",
+    "- Add the notebook to the context of the chat and switch the agent to the `ds-categorical-analysis` mode.\n",
+    "- Ask Copilot to extend the analysis of the villagers and see if there are any villager traits that are corelated.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a6bbe63",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -286,70 +296,27 @@
     "##### Prompt\n",
     "\n",
     "```sh\n",
-    "This function is not converting the ratings to integers\n",
+    "Help me figure out if any properties of the villagers are correlated.\n",
     "```\n",
     "\n",
-    "##### Expected output\n",
-    "\n",
-    "```python\n",
-    "def convert_ratings_to_int(df):\n",
-    "    \"\"\"\n",
-    "    Convert the 'rating' column from float to integer.\n",
-    "    \"\"\"\n",
-    "    if 'rating' in df.columns:\n",
-    "        df['rating'] = df['rating'].to_int()\n",
-    "    return df\n",
-    "```\n",
     "</details>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "df79f380",
+   "id": "86cf7d21",
    "metadata": {},
    "source": [
-    "## Preliminary analysis\n",
-    "TODO:\n",
-    "<!-- A robust Python project can benefit from testing. You will add some unit tests and find more on how to run these tests with the help of GitHub Copilot.\n",
-    "\n",
-    "Make sure you have the terminal open by running the command palette and typing `toggle terminal` -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7006f08c",
-   "metadata": {},
-   "source": [
-    "### 1. Test your CLI\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢⚪⚪] 10/12 (83%)\n",
+    "### 6. Prepare graphics for export\n",
     "\n",
     "⏳ **~5min**\n",
     "\n",
-    "- This project has the Pytest test runner and framework pre-installed, make sure it is available by running `pytest --version`\n",
-    "- Run the tests while in the `workshop` directory by using the following command: `pytest -v`\n",
-    "\n",
-    "The output should give you a failure."
+    "- In a cell generating plots in the notebook, open inline Copilot chat (Ctrl-i / Cmd-i) and ask the agent to help add a method to export the plots in that cell as high resolution pngs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9ad44e78",
-   "metadata": {},
-   "source": [
-    "#### 2. Fix the failing test\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢⚪] 11/12 (91%)\n",
-    "\n",
-    "⏳ **~5min**\n",
-    "\n",
-    "- Select the output in the terminal and paste it into GitHub Copilot Chat, prefixing with a request for a fix and an explanation\n",
-    "- Use the output from the chat to implement a fix in `test_main.py`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57a249c0",
+   "id": "35499d7d",
    "metadata": {},
    "source": [
     "<details>\n",
@@ -358,110 +325,9 @@
     "##### Prompt\n",
     "\n",
     "```sh\n",
-    "Fix the test and explain your fix:\n",
-    "// Copy and paste the output from the terminal here\n",
+    "Export all the plots in this cell as high DPI PNGs \n",
     "```\n",
     "\n",
-    "##### Expected output\n",
-    "\n",
-    "The error occurs because the drop_notes function is likely modifying the DataFrame in place, rather than returning a new DataFrame with the 'notes' column dropped. To fix the test, we need to ensure that the drop_notes function returns a new DataFrame without the 'notes' column and then check the columns of this new DataFrame.\n",
-    "\n",
-    "Here is the corrected test function:\n",
-    "\n",
-    "```python\n",
-    "def test_drop_notes_column_dropped():\n",
-    "    # Create a sample DataFrame with 'notes' column\n",
-    "    df = pd.DataFrame({'A': [1, 2, 3], 'B': [4, 5, 6], 'notes': ['note1', 'note2', 'note3']})\n",
-    "\n",
-    "    # Call the drop_notes function and get the result\n",
-    "    result = main.drop_notes(df)\n",
-    "    \n",
-    "    # Assert that 'notes' column in result dataframe is dropped\n",
-    "    columns = result.columns.to_list()\n",
-    "    assert columns == ['A', 'B']\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "475f466f",
-   "metadata": {},
-   "source": [
-    "#### 3. Add tests for the one hot encoding function\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢] 12/12 (100%) - 🎉 Celebrate!\n",
-    "\n",
-    "⏳ **~5min**\n",
-    "\n",
-    "- Ensure that the `python check.py` has all OK output, otherwise this step might not work.\n",
-    "- Select the `drop_and_one_hot_encode_red_wine` function in `main.py`\n",
-    "- Open inline chat with `Ctrl-i`/`Cmd-i`\n",
-    "- Use the `/tests` slash command to get suggestions on tests\n",
-    "- Review the output, accept it, and verify with the `pytest -v` command. All tests should be passing, and you should have more tests than before. Sometimes Copilot will indent the suggested tests incorrectly (nesting them inside an existing test function), so make sure the tests are correctly indented before running them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "833dd622",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>Cheatsheet</summary>\n",
-    "\n",
-    "##### Prompt\n",
-    "\n",
-    "```sh\n",
-    "/tests\n",
-    "```\n",
-    "\n",
-    "##### Expected output\n",
-    "\n",
-    "```python\n",
-    "def test_drop_and_one_hot_encode_red_wine_red_wine_column_created():\n",
-    "    # Create a sample DataFrame with 'variety' column\n",
-    "    df = pd.DataFrame({'A': [1, 2, 3], 'B': [4, 5, 6], 'variety': ['Red Wine', 'White Wine', 'Red Wine']})\n",
-    "\n",
-    "    # Call the drop_and_one_hot_encode_red_wine function\n",
-    "    result = main.drop_and_one_hot_encode_red_wine(df)\n",
-    "\n",
-    "    # Assert that 'Red_Wine_Red Wine' column is created\n",
-    "    assert 'Red_Wine_Red Wine' in result.columns\n",
-    "\n",
-    "def test_drop_and_one_hot_encode_red_wine_red_wine_column_encoded():\n",
-    "    # Create a sample DataFrame with 'variety' column\n",
-    "    df = pd.DataFrame({'A': [1, 2, 3], 'B': [4, 5, 6], 'variety': ['Red Wine', 'White Wine', 'Red Wine']})\n",
-    "\n",
-    "    # Call the drop_and_one_hot_encode_red_wine function\n",
-    "    result = main.drop_and_one_hot_encode_red_wine(df)\n",
-    "\n",
-    "    # Assert that 'Red_Wine_Red Wine' column is encoded correctly\n",
-    "    assert result['Red_Wine_Red Wine'].tolist() == [1, 0, 1]\n",
-    "\n",
-    "def test_drop_and_one_hot_encode_red_wine_variety_column_dropped():\n",
-    "    # Create a sample DataFrame with 'variety' column\n",
-    "    df = pd.DataFrame({'A': [1, 2, 3], 'B': [4, 5, 6], 'variety': ['Red Wine', 'White Wine', 'Red Wine']})\n",
-    "\n",
-    "    # Call the drop_and_one_hot_encode_red_wine function\n",
-    "    result = main.drop_and_one_hot_encode_red_wine(df)\n",
-    "\n",
-    "    # Assert that 'variety' column is dropped\n",
-    "    assert 'variety' not in result.columns\n",
-    "\n",
-    "def test_drop_and_one_hot_encode_red_wine_dataframe_unchanged():\n",
-    "    # Create a sample DataFrame with 'variety' column\n",
-    "    df = pd.DataFrame({'A': [1, 2, 3], 'B': [4, 5, 6], 'variety': ['Red Wine', 'White Wine', 'Red Wine']})\n",
-    "\n",
-    "    # Call the drop_and_one_hot_encode_red_wine function\n",
-    "    result = main.drop_and_one_hot_encode_red_wine(df)\n",
-    "\n",
-    "    # Assert that the shape of the DataFrame is unchanged\n",
-    "    assert result.shape == (3, 3)\n",
-    "\n",
-    "    # Assert that the original DataFrame is not modified\n",
-    "    assert 'variety' in df.columns\n",
-    "    assert df.shape == (3, 3)\n",
-    "```\n",
     "</details>"
    ]
   },
