Refined categorical chat mode

--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "In this workshop, you will be working with CSV data included in this repository, as well as a Jupyter Notebook that starts some analysis of the data. Here are some features of the project you will work with:\n",
     "\n",
-    "1. Consume a CSV dataset and clean it\n",
+    "1. Review a CSV dataset and clean the data\n",
     "1. Identify correlations and create polished, exportable results\n",
     "1. Fast track creating a new analysis notebook from scratch"
    ]
@@ -65,6 +65,7 @@
     "- GitHub Copilot\n",
     "- Python extension\n",
     "- Jupyter extension\n",
+    "- Data Wrangler extension\n",
     "- Pre-installed Python dependencies with an activated Virtual Environment\n",
     "\n",
     "> ❗\n",
@@ -77,8 +78,6 @@
    "metadata": {},
    "source": [
     "### 1. Create a new repository from this template\n",
-    "\n",
-    "Progress: [🟢⚪⚪⚪⚪⚪⚪⚪⚪⚪⚪⚪] 1/12 (8%)\n",
     "\n",
     "⏳ **~2min**\n",
     "\n",
@@ -134,7 +133,7 @@
     "\n",
     "GitHub Copilot benefits from having context. One way to enhance context is by opening relevant files, else you can add them into your prompt context later.\n",
     "\n",
-    "- Open the `villagers.csv`, `furnature.csv` and `villagers_analysis.ipynb` data files."
+    "- Open the `data/acnh-data/villagers.csv`, `data/acnh-data/fish.csv` and `workshop/villagers_analysis.ipynb`  files."
    ]
   },
   {
@@ -172,6 +171,9 @@
     "- Scroll around and look at the state of the data, noting all of the column summaries at the top\n",
     "- Using the Copilot agent built into Data Wrangler in the panel below the grid, ask it to change the values of the `Rain/Snow Catch Up` column to a bool type with 0 as false\n",
     "- Export your new data as a csv file `fish-cleaned.csv` via the button just above the grid that says `Export to CSV`\n",
+    "\n",
+    "> 📝 **Note:**\n",
+    "> There is more cleaning we could do, but we will get Copilot to help more in future steps.\n",
     "\n",
     ">💡 If you need to repeat the same cleaning process many times, you can export your steps in Data Wrangler to a reuseable notebook or as python code to your clipbord!\n"
    ]
@@ -242,8 +244,8 @@
     "\n",
     "⏳ **~3min**\n",
     "\n",
-    "- In your newly created notebook, go to a cell output that has some sort of plot\n",
-    "- Can click and drag it to the Copilot chat panel and ask directly for it to change something about the plot (you can also add it by clicking the `...` to the top right of the cell)\n"
+    "- In your newly created notebook, go to a cell output that has a plot\n",
+    "- Click and drag it to the Copilot chat panel and ask directly for it to change something about the plot (you can also add it by clicking the `...` to the top right of the cell)\n"
    ]
   },
   {
@@ -333,176 +335,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29599ead",
-   "metadata": {},
-   "source": [
-    "## Bonus\n",
-    "\n",
-    "There are a couple of bonus challenges if you've completed all the tasks and your scripts are in good shape."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "efc7a4ac",
-   "metadata": {},
-   "source": [
-    "### Bonus Challenge 1 - Create a robust CLI tool\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢] 12/12 (100%) 🎉  \n",
-    "Optional: [🚀 Turbo Boost! (1/2) 33%]\n",
-    "\n",
-    "- Use GitHub Copilot chat with the `@workspace` prefix to convert the project into a CLI with options and a help menu\n",
-    "- Ensure that the prompt specifies no external dependencies and it should only use the standard library"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43980519",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>Cheatsheet</summary>\n",
-    "\n",
-    "#### Prompt\n",
-    "\n",
-    "```shell\n",
-    "@workspace I want to convert this project into a CLI with a help menu. Help me do this without using any dependencies, just pure Python standard library\n",
-    "```\n",
-    "\n",
-    "#### Expected output\n",
-    "\n",
-    "```python\n",
-    "def main():\n",
-    "    parser = argparse.ArgumentParser(description=\"DataFrame manipulation CLI\")\n",
-    "    subparsers = parser.add_subparsers(dest=\"command\")\n",
-    "\n",
-    "    subparsers.add_parser(\"drop_notes\", help=\"Drop the 'notes' column from the DataFrame\")\n",
-    "    subparsers.add_parser(\"select_high_ratings\", help=\"Select rows where the 'rating' column is 90 or higher\")\n",
-    "    subparsers.add_parser(\"drop_and_one_hot_encode_red_wine\", help=\"One-hot encode 'Red Wine' and drop 'variety' column\")\n",
-    "    subparsers.add_parser(\"remove_newlines_carriage_returns\", help=\"Remove newlines and carriage returns from string columns\")\n",
-    "    subparsers.add_parser(\"convert_ratings_to_int\", help=\"Convert the 'rating' column from float to integer\")\n",
-    "\n",
-    "    args = parser.parse_args()\n",
-    "\n",
-    "    # Load your DataFrame here\n",
-    "    df = pd.read_csv('workshop/train.csv')\n",
-    "\n",
-    "    if args.command == \"drop_notes\":\n",
-    "        df = drop_notes(df)\n",
-    "    elif args.command == \"select_high_ratings\":\n",
-    "        df = select_high_ratings(df)\n",
-    "    elif args.command == \"drop_and_one_hot_encode_red_wine\":\n",
-    "        df = drop_and_one_hot_encode_red_wine(df)\n",
-    "    elif args.command == \"remove_newlines_carriage_returns\":\n",
-    "        df = remove_newlines_carriage_returns(df)\n",
-    "    elif args.command == \"convert_ratings_to_int\":\n",
-    "        df = convert_ratings_to_int(df)\n",
-    "    else:\n",
-    "        parser.print_help()\n",
-    "\n",
-    "    # Save the transformed DataFrame\n",
-    "    df.to_csv('workshop/transformed_train.csv', index=False)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "69cbf07c",
-   "metadata": {},
-   "source": [
-    "### Bonus Challenge 2 - Document your project\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢] 12/12 (100%) 🎉  \n",
-    "Optional: [🚀 Turbo Boost! (1/2) 33%]  \n",
-    "Optional: [🌟 Extra Points! (2/2) 66%]\n",
-    "\n",
-    "- Create a new `docs/` folder and a file called `README.md`\n",
-    "- Use GitHub Copilot chat with the `@workspace` prefix to get started documenting your project using Markdown in a README.md\n",
-    "- In your prompt, ask for help documenting the project goals, the nature of the data in the CSV files, and how the CLI works."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5db43703",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>Cheatsheet</summary>\n",
-    "\n",
-    "#### Prompt\n",
-    "\n",
-    "```shell\n",
-    "@workspace help me create a good README.md file in Markdown so that I can document this and help others understand how it works and the nature of the data\n",
-    "```\n",
-    "\n",
-    "#### Expected output\n",
-    "\n",
-    "```markdown\n",
-    "# DataFrame Manipulation CLI\n",
-    "\n",
-    "This project provides a command-line interface (CLI) for manipulating a DataFrame using various operations. The CLI is built using the Python standard library and does not require any external dependencies.\n",
-    "\n",
-    "...\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6199faf5",
-   "metadata": {},
-   "source": [
-    "### Bonus Challenge 3 - Automate the data transformation\n",
-    "\n",
-    "Progress: [🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢] 12/12 (100%) 🎉  \n",
-    "Optional: [🚀 Turbo Boost! (1/2) 33%]  \n",
-    "Optional: [🌟 Extra Points! (2/2) 66%]  \n",
-    "Optional: [🏆 Triple Threat! (2/2) 100%]\n",
-    "\n",
-    "- Create a new file called `transform-data.yaml` in the `.github/workflows/` directory.\n",
-    "- Use GitHub Copilot chat with the `@workspace` prefix to create a GitHub Action that will transform the data whenever a push or pull request is made to the repository.\n",
-    "- Open a pull request to test the action. If any errors occur, use the GitHub Copilot chat to help you fix them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "459d57c2",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>Cheatsheet</summary>\n",
-    "\n",
-    "#### Prompt\n",
-    "\n",
-    "```shell\n",
-    "@workspace Generate a GitHub action that transforms the data on every push and pull request \n",
-    "```\n",
-    "\n",
-    "#### Expected output\n",
-    "\n",
-    "```markdown\n",
-    "To create a GitHub Action that will transform the data using your CLI, you can create a workflow file in the `.github/workflows` directory. Here is an example of a GitHub Action workflow file named `transform-data.yml`:\n",
-    "\n",
-    "    ```yaml\n",
-    "    // Workflow omitted, since this is the final bonus!\n",
-    "    ```\n",
-    "\n",
-    "This workflow will:\n",
-    "\n",
-    "* Trigger on pushes to the main branch and on manual dispatch.\n",
-    "* Check out the repository.\n",
-    "* Set up Python.\n",
-    "* Install the necessary dependencies (in this case, pandas).\n",
-    "* Run the data transformation using the `run_all` command from your CLI.\n",
-    "* Upload the transformed data as an artifact."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e5a296ca",
    "metadata": {},
    "source": [
@@ -535,8 +367,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.12.11)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
