Removing a few TODOS

--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -42,8 +42,8 @@
     "In this workshop, you will be working with CSV data included in this repository, as well as a Jupyter Notebook that starts some analysis of the data. Here are some features of the project you will work with:\n",
     "\n",
     "1. Review a CSV dataset and clean the data\n",
-    "1. Identify correlations and create polished, exportable results\n",
-    "1. Fast track creating a new analysis notebook from scratch"
+    "1. Fast track creating a new analysis notebook from scratch\n",
+    "1. Identify correlations and create polished, exportable results"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "⏳ **~2min**\n",
     "\n",
     "- Click `Use this template` $\\rightarrow$ `Create a new repository`\n",
-    "- Set the owner to #TODO: What org for this?\n",
+    "- Set the owner to your orginization or if you have none, your personal account.\n",
     "- Give it a name\n",
     "- Set visibility to `Private`\n",
     "- Click `Create repository`"
@@ -311,7 +311,7 @@
    "source": [
     "### 6. Prepare graphics for export\n",
     "\n",
-    "⏳ **~5min**\n",
+    "⏳ **2min**\n",
     "\n",
     "- In a cell generating plots in the notebook, open inline Copilot chat (Ctrl-i / Cmd-i) and ask the agent to help add a method to export the plots in that cell as high resolution pngs"
    ]
@@ -335,12 +335,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31d306b4",
+   "metadata": {},
+   "source": [
+    "### 7. Create Shareable output\n",
+    "\n",
+    "⏳ **2min**\n",
+    "\n",
+    "- With the Notebook you created open, you should be able to find a button in the top toolbar of the notebook (may be under the `...`) to export your notebook.\n",
+    "- Choose HTML and check the output by right clicking on the file in the VS Code file browers and choose `Show Preview`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9b63b51",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Cheatsheet</summary>\n",
+    "\n",
+    "##### Prompt\n",
+    "\n",
+    "```sh\n",
+    "Export all the plots in this cell as high DPI PNGs \n",
+    "```\n",
+    "\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5a296ca",
    "metadata": {},
    "source": [
     "## Clean-up\n",
     "\n",
-    "### 1. Delete your Codespace\n",
+    "### 7. Delete your Codespace\n",
     "\n",
     "⏳ **~1min**\n",
     "\n",
