Fixing PDF export packages

--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -342,25 +342,8 @@
     "\n",
     "⏳ **2min**\n",
     "\n",
-    "- With the Notebook you created open, you should be able to find a button in the top toolbar of the notebook (may be under the `...`) to export your notebook.\n",
-    "- Choose HTML and check the output by right clicking on the file in the VS Code file browers and choose `Show Preview`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9b63b51",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary>Cheatsheet</summary>\n",
-    "\n",
-    "##### Prompt\n",
-    "\n",
-    "```sh\n",
-    "Export all the plots in this cell as high DPI PNGs \n",
-    "```\n",
-    "\n",
-    "</details>"
+    "- With the Notebook you created open, you should be able to find a button in the top toolbar of the notebook (may be under the `...`) to export your notebook\n",
+    "- Choose HTML or PDF and check the output by right clicking on the file in the VS Code file browers and choose `Show Preview` for HTML or just open the PDF"
    ]
   },
   {
@@ -403,7 +386,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.11"
   }
  },
