Adding note about starting copilot

--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -133,6 +133,8 @@
     "\n",
     "GitHub Copilot benefits from having context. One way to enhance context is by opening relevant files, else you can add them into your prompt context later.\n",
     "\n",
+    "> ❗If you see that the Copilot icon in VS Code's bottom bar, right side has a slash through it, click it and enable Copilot\n",
+    "\n",
     "- Open the `data/acnh-data/villagers.csv`, `data/acnh-data/fish.csv` and `workshop/villagers_analysis.ipynb`  files."
    ]
   },
