--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -155,9 +155,28 @@
     "\n",
     "⏳ **~5min**\n",
     "\n",
-    "- Open GitHub Copilot Chat\n",
+    "- Open GitHub Copilot Chat (click on the sparkling thought bubble in the top of the window of VS Code)\n",
+    "- Make sure the mode dropdown in the bottom left corner of the chat box is set to \"agent\"\n",
     "- Use the `@workspace` agent to ask Copilot what is the nature of the data you are going to work with\n",
     "- Also ask `@workspace` what sort of python packages the project uses, and in what ways"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be440fdc",
+   "metadata": {},
+   "source": [
+    "<details>\n",
+    "<summary>Cheatsheet</summary>\n",
+    "\n",
+    "##### Prompt\n",
+    "\n",
+    "```sh\n",
+    "@workspace Tell me about this project\n",
+    "@workspace What python packages does this repo use and why?\n",
+    "```\n",
+    "\n",
+    "</details>"
    ]
   },
   {
@@ -172,6 +191,7 @@
     "- Right click on `data/acnh-data/fish.csv`, and open it with Data Wrangler. If it needs a kernel selected, choose the the `venv` Python environment\n",
     "- Scroll around and look at the state of the data, noting all of the column summaries at the top\n",
     "- Using the Copilot agent built into Data Wrangler in the panel below the grid, ask it to change the values of the `Rain/Snow Catch Up` column to a bool type with 0 as false\n",
+    "- Click the apply button below the Copilot generated code to apply the transformation\n",
     "- Export your new data as a csv file `fish-cleaned.csv` via the button just above the grid that says `Export to CSV`\n",
     "\n",
     "> 📝 **Note:**\n",
@@ -191,7 +211,7 @@
     "##### Prompt\n",
     "\n",
     "```sh\n",
-    "Clean up the rain/snow column so that it is a bool type and No is false\n",
+    "Convert this column to a bool type where No is 0\n",
     "```\n",
     "\n",
     "</details>"
@@ -215,9 +235,11 @@
     "⏳ **~5min**\n",
     "\n",
     "- Open the Copilot chat panel from the icon in the top menubar or the command pallet (View: Toggle Chat)\n",
-    "- In the text box at the bottom click the add context button and select `Files & Folders...`, navigate to your newly cleaned `fish-cleaned.csv`, and select it\n",
+    "- Click the ➕ button in the top of the panel to start a new chat\n",
+    "- Make sure you have your new `fish-cleaned.csv` file open in the editor to make things easy.\n",
+    "- In the text box at the bottom click the add context button and select your newly cleaned `fish-cleaned.csv`\n",
     "- In the bottom left of the chat box, select the `ds-create` mode for the chat.\n",
-    "- Ask Copilot to start a new project for this data in the chat panel text box\n"
+    "- Ask Copilot to start a new Jupyter Notebook for this data in the chat panel text box\n"
    ]
   },
   {
@@ -231,7 +253,7 @@
     "##### Prompt\n",
     "\n",
     "```sh\n",
-    "Start a new analysis for this data\n",
+    "Can you start a new notebook for this fish data?\n",
     "```\n",
     "\n",
     "</details>"
@@ -284,8 +306,9 @@
     "\n",
     "⏳ **~5min**\n",
     "\n",
-    "- Open the `villager_analysis.ipynb` file and the copilot chat side panel\n",
-    "- Add the notebook to the context of the chat and switch the agent to the `ds-categorical-analysis` mode.\n",
+    "- Open the `villager_analysis.ipynb` file and the Copilot chat side panel\n",
+    "- Click the ➕ button in the top of the panel to start a new chat\n",
+    "- Add the `villager_analysis.ipynb` notebook to the context of the chat and switch the agent mode in the bottom left to the `ds-categorical-analysis` mode.\n",
     "- Ask Copilot to extend the analysis of the villagers and see if there are any villager traits that are corelated.\n"
    ]
   },
