--- a/workshop/README.ipynb
+++ b/workshop/README.ipynb
@@ -399,6 +399,9 @@
     "* [GitHub Copilot Documentation](https://docs.github.com/copilot)\n",
     "* [VS Code video series: GitHub Copilot](https://www.youtube.com/playlist?list=PLj6YeMhvp2S7rQaCLRrMnzRdkNdKnMVwg)\n",
     "* [Blog: Best practices for prompting Copilot](http://blog.pamelafox.org/2023/06/best-practices-for-prompting-github.html)\n",
+    "* [Docs: Data Wrangler](https://code.visualstudio.com/docs/datascience/data-wrangler)\n",
+    "* [Docs: Custom Chat mode files](https://code.visualstudio.com/docs/copilot/customization/custom-chat-modes#_custom-chat-modes)\n",
+    "* [Docs: AI in Jupyter Notebooks](https://code.visualstudio.com/docs/copilot/guides/notebooks-with-ai?originUrl=%2Fdocs%2Fdatascience%2Fjupyter-notebooks)\n",
     "\n",
     "Also check out the [GitHub Foundations learning path](https://learn.microsoft.com/training/paths/github-foundations/) for more resources on GitHub and GitHub Copilot."
    ]
